# Runway-Occupancy

./: .gitignore  README  README.md  pyproject.toml  requirements.txt
config/: default.yaml
scripts/: run_experiments.sh
src/: config.py  episode_machine.py  geometry.py  inference.py  main.py  mkv2mp4.py  models.py  outputs.py  postprocessing.py  preprocessing.py  tracker.py  utils.py
src/air_track/cli/: main.py
src/air_track/config/: loader.py  schema.py
src/air_track/detection/: __init__.py  inference.py  models.py
src/air_track/logging/: __init__.py  logger.py
src/air_track/tracking/: __init__.py  episode_machine.py  geometry.py  tracker.py
src/air_track/utils/: __init__.py  mkv2mp4.py  outputs.py  preprocessing.py  utils.py
